--- a/popmoongames_site/styles.css
+++ b/popmoongames_site/styles.css
@@ -26,7 +26,6 @@ header {
     background-position: center;
     /* Centraliza a imagem */
 }
-
 /* Define o tamanho máximo da logo */
 #logo {
     width: 500px;
@@ -141,4 +140,24 @@ footer a {
 footer a:hover {
     text-decoration: underline;
     /* Adiciona sublinhado ao passar o mouse */
+}
+
+.header-buttons {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.header-buttons button {
+    background-color: #bc00bc; /* Cor dos botões */
+    color: yellow;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-left: 10px;
+}
+
+.header-buttons button:hover {
+    background-color: #993399; /* Cor ao passar o mouse */
 }
